# briefutil

./: LICENSE.txt  README.md
briefutil/: CMakeLists.txt  README.md  briefutil.pro  briefutil.rc  main.cpp  main.qml  mustermann_signature.png.h  proxy.cpp  proxy.h  st_commercial.tex.cppstring  st_simple.tex.cppstring
briefutil/cmake/: bootstrap_miktex.cmd.in
